--- a/user.css
+++ b/user.css
@@ -140,3 +140,21 @@
 	color:white;
   	background:#2966B8;
 }
+#viaje_publico{
+   display: none;
+	float: right;
+	width: 50%;
+	height: 40%;
+}
+#viaje_solicitado{
+	position:relative;
+		padding-top:20px;
+ margin-top:-300px;
+ margin-left:0px;
+ margin-right: 30px;
+ width:50%;
+ height:67%;
+ text-align:center;
+ background: rgba(51,51,51,0.1);
+ float: right;;
+}
