--- a/user.css
+++ b/user.css
@@ -25,8 +25,8 @@
 	display:block;
 	position:relative;
 	float:right;
-	right:10px;
-	width:310px;
+	right:5px;
+	width:250px;
     height: 330px;
 	box-shadow: 0 3px 12px rgba(0, 0, 0, 0.25);
 	z-index:2;
@@ -43,7 +43,7 @@
 	position:relative;
     padding-top:20px;
 	margin-top:30px;
-	margin-left:30px;
+	margin-left:10px;
 	width:40%;
 	height:60%;
 	text-align:center;
@@ -141,10 +141,17 @@
   	background:#2966B8;
 }
 #viaje_publico{
-   display: none;
-	float: right;
-	width: 50%;
-	height: 40%;
+	position:relative;
+	 padding-top:20px;
+ margin-top:-300px;
+ margin-left:0px;
+ margin-right: 10px;
+ width:57%;
+ height:67%;
+ text-align:center;
+ background: rgba(51,51,51,0.1);
+ float: right;
+display: none;
 }
 #viaje_solicitado{
 	position:relative;
@@ -156,5 +163,46 @@
  height:67%;
  text-align:center;
  background: rgba(51,51,51,0.1);
- float: right;;
+ float: right;
+ display: none;
+}
+
+#menu_user input{
+	background: #ff9900;
+	width:150px;
+   height: 40px;
+}
+#mapa{
+	width:70%;
+	background: green;
+	height: 300px;
+}
+#viaje_solicitado table{
+	  width: 100%;
+		margin-top: -80px;
+		border: none;
+		border-top: solid 1px #000;
+		height: 40px;
+}
+#viaje_solicitado table tr td{
+	width: 25%;
+	height: 40px;
+	background: #a5a595;
+	margin-bottom:  40px;
+}
+table tr{
+	height: 40%;
+}
+#viaje_publico table{
+	  width: 100%;
+		margin-top: -80px;
+		border: none;
+		border-top: solid 1px #000;
+		height: 40px;
+}
+#viaje_publico table tr td{
+	width: 9.9%;
+	height: 40px;
+	background: #a5a595;
+	margin-bottom:  40px;
 }
