--- a/style.css
+++ b/style.css
@@ -212,12 +212,11 @@ ul li:hover{
 #Viajes_p{
   margin: 10px;
   padding: 10px;
-	padding-top:30px;
+  padding-top:30px;
   margin-left:30px;
-
-	width:60%;
-	height:60%;
-	background: rgba(51,51,51,0.1);
+  width:60%;
+  height:60%;
+  background: rgba(51,51,51,0.1);
   overflow-x: hidden;
 }
 
@@ -259,4 +258,48 @@ ul li:hover{
  height: 2px;
  width: 100%;
  background:  gray;
+}
+.search{
+	position:relative;
+	margin-right: 2px;
+	font-size:16px;
+    margin-top:10px;
+    border: solid 1px rgba(51,51,51,0.1);
+	width:225px;
+    height:30px;
+	padding:10px;
+	padding-top:2px;
+	padding-bottom:5px;
+	-webkit-transition:all 0.3s ease-in-out;
+    border-bottom: solid 1px #dcdcdc; 	
+}
+.btn{
+	height: 30px;
+	border: 1px solid rgba(51,51,51,0.1);
+	width:100px;
+	border-radius:8px;
+	color:white;
+	background: #0278BA;
+	
+}
+.azul:hover{
+	background: #0191CB;	
+}
+.cur_p1{
+	cursor:pointer;
+}
+#v_populares{
+	width: 100%;
+	
+}
+.hnm{
+	height: inherit;
+}
+.wnm{
+	width:inherit;
+}
+#inimap{
+	background: rgba(51,51,51,0.1);
+	width:60%;
+	height: 40%;
 }
