--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ ul li:focus{
 	position:relative;
 	border: solid 0px;
 	line-height:0px;
-	padding:8px;
+	padding:0  px;
 	background:green;
 	height:65px;
 	top:5px;
@@ -311,4 +311,45 @@ ul li:hover{
 }
 .pac-item{
 	height: 35px;
+}
+#gu{
+  cursor: pointer;
+}
+#op{
+  height: 80px;
+  width: 300px;
+  margin: auto;
+  border: solid 1px #003;
+  top: 20%;
+  z-index: 1001;
+  position: absolute;
+  margin-left: 40%;
+  display: none;
+  background-color: blue;
+}
+#op input{
+  height: 50%;
+  margin: auto;
+  width: 100%;
+
+}
+#opaco{
+  left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 999;
+    display:none;
+    background-color: #777777;
+
+    opacity: 0.7;
+}
+#op a{
+height: 50%;
+width: 100%;
+}
+#User img{
+   top: 10px;
+   height: 25px;
+   width: 25px;
 }
