--- a/user.css
+++ b/user.css
@@ -225,3 +225,63 @@ table tr{
 .pac-item{
 	height: 35px;
 }
+#Viajes_p_b{
+  position:relative;
+  margin: 10px;
+  padding: 10px;
+  padding-top:30px;
+  height:70%;
+  width:60%;
+  left:15%;
+  background: rgba(51,51,51,0.1);
+  overflow-x: hidden;	
+}
+#Viajes_p_b a{
+	color:#0178CB;
+}
+#oferta{
+	margin-top: 15px;
+	float:left;
+	height: 20%;
+	width:60%;
+
+	
+}
+#cupos{
+	margin-top: 15px;
+	float:left;
+	height: 20%;
+	width:60%;
+
+	
+}
+#botton{
+	margin-top: 15px;
+	float:left;
+	height: 20%;
+	width:60%;
+
+	
+}
+#botton input{
+ margin-top: 20px;
+	
+}
+.verde{
+
+}
+#foto{
+	margin-top: 15px;
+	margin-right: 10px;
+	float:left;
+	height: 100%;
+	width:30%;
+	border-radius:100px; 
+	
+}
+#foto #img{
+	height: 80px;
+	width:80px;
+	border-radius:100%; 
+   background: red;
+}
