--- a/style.css
+++ b/style.css
@@ -357,3 +357,19 @@ width: 100%;
  #se center{
   height:  40px;
 }
+#notificaciones{
+  position: absolute;
+  margin-left: 78%;
+  height: 50px;
+  width: 20%;
+  margin-right: 2%;
+  background-color: #ff0000;
+  z-index: 1001;
+  top: 83%;
+  border-radius: 20px;
+display: none;
+}
+#notificaciones p{
+  margin-top: 15px;
+  color: white;
+}
