--- a/style.css
+++ b/style.css
@@ -373,3 +373,26 @@ display: none;
   margin-top: 15px;
   color: white;
 }
+#lf{
+  margin: auto;
+  margin-left: 40%;
+  margin-right: 40%;
+  height: 100px;
+  margin-top: 15%;
+  width: 20%;
+
+}
+#lf input{
+  height: 27px;
+  width: 100%;
+  margin-top: 2px;
+}
+#lf #en{
+width:  80%;
+margin-left: 10%;
+margin-right: 10%;
+margin-top: 10px;
+cursor: pointer;
+border-radius: 5px;
+background: #13afaf;
+}
